<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heading"
        android:padding="4dp"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:textColor="#8A000000"/>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/heading"
        android:background="#6A9E9A9A" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobileandemail"
        android:includeFontPadding="true"
        android:padding="6dp"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/mobileandemail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/mobile"
        android:inputType="textEmailAddress"
        tools:ignore="labelFor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#8A00ACC1"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:hint="@string/h1"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:includeFontPadding="true"
        android:padding="6dp"
        android:layout_below="@+id/mobileandemail"
        android:autofillHints="none"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="3dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/mail"
        android:layout_alignParentStart="true"
        tools:ignore="labelFor"
        android:layout_marginTop="1dp"
        android:autofillHints="password"
        android:backgroundTint="#8A00ACC1"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:hint="@string/h2"/>
    <Button
        android:id="@+id/bn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_below="@id/password"
        android:layout_marginTop="6dp"
        android:backgroundTint="#639DFF"
        android:text="@string/log"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/forget"
        android:textAllCaps="false"
        android:layout_below="@id/bn1"
        android:textSize="17sp"
        android:textColor="#1976D2"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget"
        android:text="@string/or"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"/>

    <Button
        android:id="@+id/bn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or"
        android:layout_centerInParent="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="#36C13E"
        android:gravity="bottom|center"
        android:padding="8dp"
        android:text="@string/acc"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bn2"
        android:text="@string/english"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/english"
        android:text="@string/hindi"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/urdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hindi"
        android:text="@string/urdu"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/polish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/urdu"
        android:text="@string/polish"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/polish"
        android:text="@string/spanish"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spanish"
        android:text="@string/more"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="7dp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"/>

</RelativeLayout>