<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createDOB">

    <TextView
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/join"
        android:background="#60BAA3A3"
        android:layout_marginTop="6dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_below="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/volume"/>

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/birth"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:text="@string/dobl1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t2"
        android:text="@string/dobl2"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t3"
        android:layout_marginTop="13dp"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/e1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/t4"
        android:autofillHints="phone"
        android:inputType="date"
        tools:ignore="labelFor"
        android:hint="@string/hintfordob"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n"
        android:backgroundTint="#072EF3"
        android:layout_below="@id/e1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="#072EF3"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="300dp"/>
</RelativeLayout>
