<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".forgetpassword">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heading"
        android:padding="4dp"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:textColor="#8A000000"/>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/heading"
        android:background="#6A9E9A9A" />

    <TextView
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:includeFontPadding="true"
        android:padding="6dp"
        android:layout_marginTop="35dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:includeFontPadding="true"
        android:padding="6dp"
        android:layout_marginTop="80dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/phoneinput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/phone"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#8A00ACC1"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:hint="@string/ph1"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_below="@+id/phoneinput"
        android:backgroundTint="#25000000"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/search"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_below="@+id/phoneinput"
        android:backgroundTint="#536BEF"
        android:text="@string/search"
        android:textSize="16sp"
        android:layout_marginStart="200dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#536BEF"
        android:layout_below="@+id/search"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"/>

</RelativeLayout>