<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".createname">

    <TextView
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="9dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/join"
        android:layout_marginTop="6dp"
        android:background="#83D8C3C3"/>

    <TextView
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:includeFontPadding="true"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/real"
        android:textSize="18sp"
        android:layout_below="@+id/name1"
        android:gravity="center"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name2"
        android:orientation="vertical"
        android:padding="2dp">

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:includeFontPadding="true"/>

    <EditText
        android:id="@+id/namefill"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:hint="@string/h2"/>

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-76dp"/>

    <EditText
        android:id="@+id/surnamefill"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginStart="190dp"
        android:hint="@string/h2"/>

    </LinearLayout>

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:backgroundTint="#23529A"
        android:text="@string/n"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:textColor="#01579B"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/account"/>

</RelativeLayout>