<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creategender">

    <TextView
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/join"
        android:background="#60BAA3A3"
        android:layout_marginTop="6dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_below="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/volume"/>

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/gender"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:text="@string/genderl1"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t2"
        android:text="@string/genderl2"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/t4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t3"
        android:layout_marginTop="18dp"
        android:text="@string/f"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textSize="20sp"
        android:layout_marginStart="8dp"/>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/t4"
        android:background="#60BAA3A3"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/t5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v1"
        android:text="@string/m"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:padding="6dp"/>

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/t5"
        android:background="#60BAA3A3"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v2"
        android:text="@string/c"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/t7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t6"
        android:padding="2dp"
        android:text="@string/belowc"
        android:textSize="15sp"
        android:layout_marginStart="8dp"/>

    <View
        android:id="@+id/v3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/t7"
        android:background="#60BAA3A3"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n"
        android:backgroundTint="#072EF3"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="19sp"
        android:layout_below="@id/v3"/>

    <TextView
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1"
        android:text="@string/account"
        android:textColor="#072EF3"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="180dp"/>

</RelativeLayout>